--- a/android/res/layout/fragment_take_picture.xml
+++ b/android/res/layout/fragment_take_picture.xml
@@ -19,7 +19,7 @@
 			android:layout_height="wrap_content"
 			android:gravity="center"
 			android:padding="6dp"
-			android:background="@drawable/edittext_comment_bg"
+			android:background="@drawable/edittext_bg"
 			android:hint="@string/enter_title"
 			android:maxLength="16"
 			android:singleLine="true" />
@@ -47,7 +47,7 @@
 			android:layout_height="wrap_content"
 			android:gravity="center"
 			android:padding="6dp"
-			android:background="@drawable/edittext_comment_bg"
+			android:background="@drawable/edittext_bg"
 			android:hint="@string/enter_caption"
 			android:maxLength="30"
 			android:singleLine="true" />
