--- a/android/res/layout/popwin_comment.xml
+++ b/android/res/layout/popwin_comment.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/popwin_comment_bg" >
     
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:layout_marginBottom="6dp"
     	android:gravity="center"
@@ -17,11 +17,22 @@
     
     <EditText 
         android:id="@+id/add_comment"
-        android:layout_width="fill_parent"
-    	android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+    	android:layout_height="0dp"
+    	android:layout_weight="1"
     	android:gravity="top|left"
     	android:padding="14dp"
     	android:textSize="16sp"
     	android:background="@drawable/edittext_comment_bg" />
+    
+    <Button
+        android:id="@+id/btn_finish_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+		android:includeFontPadding="false"
+		android:background="@drawable/btn_white_matte"  
+		android:textSize="16sp"
+        android:text="@string/finished" />
 
 </LinearLayout>
