--- a/android/res/layout/fragment_view_member.xml
+++ b/android/res/layout/fragment_view_member.xml
@@ -110,7 +110,6 @@
 	        android:paddingLeft="10dp"
 	        android:paddingRight="10dp" >
 	        
-	        <!-- CONTAINER FOR UP/DOWN VOTE NUMBERS -->
 	        <LinearLayout
 	            android:layout_width="match_parent"
 	        	android:layout_height="wrap_content"
@@ -124,14 +123,14 @@
 			 		android:contentDescription="@string/desc_vote_up" />
 		        
 		        <TextView
+		            android:id="@+id/vote_up_count"
 		            android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
 				    android:layout_gravity="center_vertical"
 				    android:layout_marginRight="10dp"
 				    android:textColor="#00b200"
 				    android:textSize="16sp"
-				    android:textStyle="bold"
-				    android:text="21" />
+				    android:textStyle="bold" />
 		        
 		        <ImageView
 				    android:layout_width="wrap_content"
@@ -140,14 +139,15 @@
 			 		android:contentDescription="@string/desc_vote_down" />
 		        
 		        <TextView
+		            android:id="@+id/vote_down_count"
 		            android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
 				    android:layout_gravity="center_vertical"
 				    android:layout_marginRight="10dp"
 				    android:textColor="#cc0000"
 				    android:textSize="16sp"
-				    android:textStyle="bold"
-				    android:text="43" />
+				    android:textStyle="bold" />
+		        
 	        </LinearLayout>
 	        
 	        <ImageButton
