--- a/android/res/layout/listview_row_member.xml
+++ b/android/res/layout/listview_row_member.xml
@@ -77,33 +77,35 @@
         <ImageView
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
+		    android:layout_marginRight="2dp"
 	 		android:src="@drawable/arrow_up_small"
 	 		android:contentDescription="@string/desc_vote_up" />
         
         <TextView
+            android:id="@+id/vote_up_count"
             android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_gravity="center_vertical"
+		    android:layout_marginRight="10dp"
 		    android:textColor="#00b200"
 		    android:textSize="16sp"
-		    android:textStyle="bold"
-		    android:text="21" />
+		    android:textStyle="bold" />
         
         <ImageView
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="10dp"
+		    android:layout_marginRight="2dp"
 	 		android:src="@drawable/arrow_down_small"
 	 		android:contentDescription="@string/desc_vote_down" />
         
         <TextView
+            android:id="@+id/vote_down_count"
             android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_gravity="center_vertical"
 		    android:textColor="#cc0000"
 		    android:textSize="16sp"
-		    android:textStyle="bold"
-		    android:text="43" />
+		    android:textStyle="bold" />
         
     </LinearLayout>
         
