--- a/android/res/layout/fragment_view_member.xml
+++ b/android/res/layout/fragment_view_member.xml
@@ -68,6 +68,7 @@
 		        android:src="@drawable/image_placeholder" />
 	        
 	        <LinearLayout
+	            android:id="@+id/vote_container"
 	            android:layout_width="match_parent"
 	        	android:layout_height="wrap_content"
 	        	android:layout_gravity="bottom"
