--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -28,12 +28,13 @@
     </style>
     
     <style name="comment_name">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">#30acff</item>
+        <item name="android:textStyle">bold</item>
     </style>
     
     <style name="comment">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">#000000</item>
     </style>
 
