--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -65,7 +65,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:visibility="gone"
-                android:src="@drawable/arrow_next" />
+                android:src="@drawable/arrow_next"
+                android:contentDescription="@string/desc_next_picture" />
         	
 		</RelativeLayout>
 
