--- a/android/res/layout/fragment_take_picture.xml
+++ b/android/res/layout/fragment_take_picture.xml
@@ -46,12 +46,12 @@
         
     </LinearLayout>
     
-    <Button
+    <ImageButton
         android:id="@+id/btn_assign_team"
         android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="12dp"
+		android:layout_marginTop="20dp"
 		android:layout_gravity="center_horizontal"
-		android:text="@string/btn_assign_team" />
+		android:background="@drawable/btn_assign_team" />
 
 </LinearLayout>
