--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -1,40 +1,29 @@
+<meta property="og:image" content="http://{{ imageUrl}}"/>
 <header>
     {% load staticfiles %}
 	<link href="{% static "bootstrap-3.1.1-dist/css/bootstrap.css" %}" rel="stylesheet" />
     
+    <style>
+		div.container{
+			padding-top: 50px;
+		}
+		div.jumbotron {
+			padding-top: 48px;
+			padding-bottom: 48px;
+		}
+	</style>
 </header>
-
+<body>
 <div class="container">
+    <div class="jumbotron">
+        <h1>Derp Team</h1>
+        <p >Hey <b>{{ you }}</b>, your friend <b>{{ friend }}</b> has added someone to be on your team! Lucky you!</p>
+        <img class="img-thumbnail" src="http://{{ imageUrl}}" />
+  	</div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <h2 class="text-center">Derp Team</h2>
-        </div> 
-    </div>
-    <div class="row">
-    	<div class="col-md-offset-3"></div>
-    	<div class="col-md-6">
-        	<h2><small class="text-center"> Hey {{ you }}, your friend {{ friend }} has recommended the following person to be on your team! Lucky you!</small></h2>
-    	</div>
-		<div class="col-md-offset-3"></div>   
-    </div>
-    
-    
-    
-    <div class="row-fluid">
-    	<div class="col-md-12 text-center">
-	    	<img src="http://{{ imageUrl}}" />
-        </div>
-    </div>
-    <div class="row">
-    	<div class="col-md-12 text-center">
-		    {{title}}
-        </div>
-    </div>
-    <div class="row">
-    	<div class="col-md-12 text-center">
-		    {{caption}}
-        </div>
-    </div>
-	</div>
+
 </div>
+
+   <!-- Main component for a primary marketing message or call to action -->
+      
+</body>
