--- a/android/res/menu/main.xml
+++ b/android/res/menu/main.xml
@@ -1,5 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
+    <!--  
+    <item
+        android:id="@+id/action_fb_share"
+        android:title="@string/action_fb_share"
+        android:icon="@drawable/btn_fb_share"
+        android:showAsAction="always"
+        android:orderInCategory="1" />
+    -->
+    
     <item
         android:id="@+id/action_log_out"
         android:title="@string/action_log_out"
@@ -10,5 +19,5 @@
         android:orderInCategory="2"
         android:showAsAction="never"
         android:title="@string/action_settings" />
-
+    
 </menu>
