--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -27,7 +27,9 @@
 <div class="container">
 	<div class ="im-centered">
         <div class="row">
-            <img class="img-responsive logo" src="{% static "images/derpteam_logo.png" %}"/>
+	  <div class="col-md-2"></div>
+	  <div class="col-md-8"><img class="img-responsive logo" src="{% static "images/derpteam_logo.png" %}"/></div>
+	  <div class="col-md-2"></div>
         </div>
     </div>
     <div class="im-centered">
