--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -32,21 +32,28 @@
 	  <div class="col-md-2"></div>
         </div>
     </div>
+
     <div class="im-centered">
-        <div class="row"> <h3>  Hey <b>{{ you }}</b>, your friend <b>{{ friend }}</b> has added someone to be on your team! Lucky you!</h3></row>
+        <div class="row"><h3>Hey <b>{{ you }}</b>, your friend <b>{{ friend }}</b> has added someone to be on your team! Lucky you!</h3></div>
+    </div>
+
+	<br><br>
+
+	<div class="im-centered">
+		<div class="row"><h2>{{title}}</h2></div>
 	</div>
-    <div class="im-centered">
-	<div class="row">
-		<div class="col-md-2"></div>
-	  	<div class="col-md-8"><img class="img-responsive img-thumbnail" src="http://{{ imageUrl}}" /></div>
-	  	<div class="col-md-2"></div>
-    </div></div>
-    <div class="im-centered"><div class="row">
-        <h2>	{{title}}</h2>
-    </div></div> 
-    <div class="im-centered"><div class="row">
-		<h2> <small> {{caption}} </small></h2>
-    </div></div>
+
+	<div class="im-centered">
+		<div class="row">
+			<div class="col-md-2"></div>
+	  		<div class="col-md-8"><img class="img-responsive img-thumbnail" src="http://{{ imageUrl}}" /></div>
+	  		<div class="col-md-2"></div>
+    		</div>
+	</div>
+ 
+    	<div class="im-centered">
+		<div class="row"><h2><small> {{caption}} </small></h2></div>
+	</div>
   	
 </div>
 
