--- a/static/templates/external-view.html
+++ b/static/templates/external-view.html
@@ -34,13 +34,13 @@
     </div>
 
     <div class="im-centered">
-        <div class="row"><h3>Hey <b>{{ you }}</b>, your friend <b>{{ friend }}</b> has added someone to be on your team! Lucky you!</h3></div>
+        <div class="row text-center"><h3>Hey <b>{{ you }}</b>, your friend <b>{{ friend }}</b> has added someone to be on your team! Lucky you!</h3></div>
     </div>
 
-	<br><br>
+	<br />
 
 	<div class="im-centered">
-		<div class="row text-center"><h2>{{title}}</h2></div>
+		<div class="row text-center"><h2>Your {{title}}</h2></div>
 	</div>
 
 	<div class="im-centered">
