--- a/android/res/layout/gridview_image.xml
+++ b/android/res/layout/gridview_image.xml
@@ -4,4 +4,4 @@
     android:id="@+id/gridview_picture"
     android:layout_width="170dp"
     android:layout_height="170dp"
-    android:scaleType="fitXY" />
+    android:scaleType="centerCrop" />
