--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -12,8 +12,7 @@
 	    
 	    <FrameLayout
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_marginTop="20dp" >
+	        android:layout_height="wrap_content" >
 	        
 	        <com.walintukai.derpteam.AspectRatioImageView
 		        android:id="@+id/rate_picture"
