--- a/android/res/layout/listview_row_member.xml
+++ b/android/res/layout/listview_row_member.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="30dp" >
+    android:paddingBottom="20dp" >
     
     <RelativeLayout
         android:layout_width="match_parent"
@@ -140,10 +140,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:gravity="center"
         android:textAppearance="@style/caption" />
-        
-    <!--  
+
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -165,6 +165,5 @@
             android:paddingLeft="10dp" />
         
     </LinearLayout>
-	-->
 
 </LinearLayout>
