--- a/android/res/layout/fragment_leaderboard.xml
+++ b/android/res/layout/fragment_leaderboard.xml
@@ -4,5 +4,6 @@
     android:id="@+id/leaderboard_listview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:dividerHeight="1dp"
-    android:divider="#30acff" />
+    android:dividerHeight="0dp"
+    android:divider="@null"
+    android:listSelector="@android:color/transparent" />
